--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	<servlet>
 		<servlet-name>listLinks</servlet-name>
 		<servlet-class>uk.ac.nott.mrl.homework.server.ListLinks</servlet-class>
-		<!--<load-on-startup>0</load-on-startup> -->
+		<load-on-startup>0</load-on-startup>
 	</servlet>
 
 	<servlet>
