--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,3 +1,3 @@
-#Tue Jan 25 11:33:37 GMT 2011
+#Fri Jul 22 15:29:12 BST 2011
 eclipse.preferences.version=1
-launchConfigExternalUrlPrefix=
+launchConfigExternalUrlPrefix=127.0.0.1\:8080/homework-devices
