--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,10 @@
 		</fileset>
 		<pathelement path="${classes.dir}" />
     </path>
+
+	<target name="clean">
+		<delete dir="${classes.dir}" />
+	</target>
 	
 	<target name="makedirs">
 		<mkdir dir="${warfile.dir}" />
@@ -37,8 +41,8 @@
 	<target name="compile" depends="makedirs"
 			description="Compile classes into web archive dir">
 		<javac destdir="${classes.dir}" debug="on" deprecation="on" 
-			   includeAntRuntime="no">
-			<src path="${src.dir}"/>
+			   includeAntRuntime="no" srcdir="${src.dir}">
+			<exclude name="uk/ac/nott/mrl/homework/client/**" />
 			<compilerarg value="-Xlint:unchecked" />
 			<classpath refid="classpath"/>
 		</javac>
@@ -49,15 +53,25 @@
 		<java classpathref="classpath.gwt" failonerror="true" fork="true"
 	        classname="com.google.gwt.dev.Compiler"> 
 	        <arg line="-war ${war.dir}"/> 
-	        <arg line="${editor.name}"/> 
+	        <arg line="${gwt.name}"/> 
 		</java> 
 	</target>
 	
-	<target name="war" depends="compile"
-			description="Create the web archive file">
+	<target name="war" depends="compile-gwt" description="Create the web archive file">
+		<copy todir="${classes.dir}">
+			<fileset dir="${src.dir}">
+				<exclude name="uk/ac/nott/mrl/homework/client/**" />
+				<exclude name="**/*.gwt.xml" />				
+				<exclude name="**/*.java"/>
+			</fileset>
+		</copy>
 		<jar jarfile="${warfile.dir}/control.war" 
 			 basedir="${war.dir}">
 			<include name="**/*" />
 		</jar>
+	</target>
+	
+	<target name="install" depends="war" description="Copies the war filoe to a local tomcat directory">
+		<copy file="${warfile.dir}/control.war" todir="${install.dir}"/>
 	</target>
 </project>
